--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "client-sessions": "^0.8.0",
     "express": "^4.17.1",
     "hbs": "^4.0.5",
+    "mysql": "^2.17.1",
     "request": "^2.88.0"
   }
 }
