--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express": "^4.17.1",
     "hbs": "^4.0.5",
     "mysql": "^2.17.1",
-    "request": "^2.88.0"
+    "request": "^2.88.0",
+    "web-push": "^3.4.0"
   }
 }
