--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "client-sessions": "^0.8.0",
     "express": "^4.17.1",
     "hbs": "^4.0.5",
-    "request": "^2.88.0"
+    "mysql": "^2.17.1",
+    "request": "^2.88.0",
+    "web-push": "^3.4.0"
   }
 }
