--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "client-sessions": "^0.8.0",
+    "cookie-parser": "^1.4.4",
     "express": "^4.17.1",
     "hbs": "^4.0.5",
     "mysql": "^2.17.1",
