--- a/package.json
+++ b/package.json
@@ -18,10 +18,13 @@
   },
   "homepage": "https://github.com/aiibaby/ThingsMyKidDo#readme",
   "dependencies": {
+    "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.19.0",
     "client-sessions": "^0.8.0",
     "cookie-parser": "^1.4.4",
     "express": "^4.17.1",
+    "express-session": "^1.17.0",
+    "express-validator": "^6.2.0",
     "hbs": "^4.0.5",
     "mysql": "^2.17.1",
     "request": "^2.88.0",
