--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "hbs": "^4.0.5",
     "mysql": "^2.17.1",
     "request": "^2.88.0",
+    "sweetalert": "^2.1.2",
     "web-push": "^3.4.0"
   }
 }
